package smartlib.patterns;

public interface NotificationService {
    void send(String recipientAddress, String message);
}
